will you work? let's see

--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,12 @@ body {
     background-repeat: repeat;
 }
 
-/* Centered Div */
-.centered-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-}
-
 /* Image Container */
-.image-container {
-    margin-top: 250px;
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-top: 200px;
 }
 
 /* Pokémon Section */
